bastion.tf
# resource "aws_instance" "bastion-host" {
#   depends_on = [aws_msk_cluster.mskcluster]
#   ami                    = "ami-0749e2c902c836c08"
#   instance_type          = "t2.small"
#   subnet_id              = aws_subnet.public[0].id
#   vpc_security_group_ids = [aws_security_group.sg.id]
#   key_name               = aws_key_pair.deployer.key_name
#   root_block_device {
#     volume_size           = 8
#     volume_type           = "gp2"
#     delete_on_termination = true
#   }
#   tags = {
#     Name = "bastion-host"
#   }
# }

# resource "tls_private_key" "key" {
#   algorithm = "RSA"
#   rsa_bits  = 4096
# }

# resource "aws_key_pair" "deployer" {
#   key_name   = "deployer-key"
#   public_key = tls_private_key.key.public_key_openssh
# }

# output "private_key" {
#   value     = tls_private_key.key.private_key_pem
#   sensitive = true
# }
